@@ -1,4 +1,7 @@
 
+2009-04-11 14:38 Ali aliov@xfce.org 
+	 * : Fix brightness buttons issue
+
 2009-04-11 11:26 Ali aliov@xfce.org 
 	 * : Fix notification timeouts when using xfce4-notifyd+minor clean up of some unused includes
 
